@@ -1,38 +1,29 @@
 package facade;
 
-
 import jakarta.validation.ConstraintViolation;
 import jakarta.validation.ConstraintViolationException;
 import jakarta.validation.Validator;
 import org.example.dto.*;
+import org.example.entity.User;
 import org.example.facade.GymFacade;
 import org.example.service.*;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.mockito.*;
 
-import java.util.List;
-import java.util.Set;
+import java.time.LocalDate;
+import java.util.*;
 
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.*;
 
 class GymFacadeTest {
 
-    @Mock
-    private TraineeService traineeService;
-
-    @Mock
-    private TrainerService trainerService;
-
-    @Mock
-    private TrainingService trainingService;
-
-    @Mock
-    private UserService userService;
-
-    @Mock
-    private Validator validator;
+    @Mock private TraineeService traineeService;
+    @Mock private TrainerService trainerService;
+    @Mock private TrainingService trainingService;
+    @Mock private UserService userService;
+    @Mock private Validator validator;
 
     @InjectMocks
     private GymFacade gymFacade;
@@ -43,99 +34,92 @@ class GymFacadeTest {
     }
 
     @Test
-    void createTrainee_validDto_delegatesAndReturns() {
-        CreateTraineeDto dto = mock(CreateTraineeDto.class);
-        TraineeDto returnedDto = mock(TraineeDto.class);
-
-
-        when(validator.validate(dto)).thenReturn(Set.of());
-        when(traineeService.createTrainee(dto)).thenReturn(returnedDto);
+    void createTrainee_shouldValidateAndCallService() {
+        CreateTraineeDto dto = new CreateTraineeDto();
+        when(validator.validate(dto)).thenReturn(Collections.emptySet());
+        TraineeDto expected = new TraineeDto();
+        when(traineeService.createTrainee(dto)).thenReturn(expected);
 
         TraineeDto result = gymFacade.createTrainee(dto);
-
-        assertSame(returnedDto, result);
-        verify(validator).validate(dto);
-        verify(traineeService).createTrainee(dto);
+        assertEquals(expected, result);
     }
 
     @Test
-    void createTrainee_invalidDto_throwsConstraintViolationException() {
-        CreateTraineeDto dto = mock(CreateTraineeDto.class);
+    void createTrainee_shouldThrowOnValidationFailure() {
+        CreateTraineeDto dto = new CreateTraineeDto();
         ConstraintViolation<CreateTraineeDto> violation = mock(ConstraintViolation.class);
+        Set<ConstraintViolation<CreateTraineeDto>> violations = Set.of(violation);
+        when(validator.validate(dto)).thenReturn(violations);
 
-        when(validator.validate(dto)).thenReturn(Set.of(violation));
-
-        ConstraintViolationException exception = assertThrows(ConstraintViolationException.class, () ->
+        assertThrows(ConstraintViolationException.class, () ->
                 gymFacade.createTrainee(dto));
-
-        assertTrue(exception.getConstraintViolations().contains(violation));
-        verify(validator).validate(dto);
-        verifyNoInteractions(traineeService);
     }
 
     @Test
-    void getTrainee_delegatesToService() {
-        String username = "user1";
-        TraineeDto dto = mock(TraineeDto.class);
+    void getTrainee_shouldAuthenticateAndReturnDto() {
+        String username = "john", password = "pass";
+        TraineeDto expected = new TraineeDto();
 
-        when(traineeService.getByUsername(username)).thenReturn(dto);
+        when(userService.authenticate(username, password)).thenReturn(new User());
+        when(traineeService.getByUsername(username, password)).thenReturn(expected);
 
-        TraineeDto result = gymFacade.getTrainee(username);
-
-        assertSame(dto, result);
-        verify(traineeService).getByUsername(username);
-        verifyNoInteractions(validator, trainerService, trainingService, userService);
+        TraineeDto result = gymFacade.getTrainee(username, password);
+        assertEquals(expected, result);
     }
 
     @Test
-    void addTraining_validDto_delegatesAndReturns() {
-        CreateTrainingDto dto = mock(CreateTrainingDto.class);
-        TrainingDto trainingDto = mock(TrainingDto.class);
+    void changeTrainerPassword_shouldValidateAuthenticateAndChange() {
+        PasswordChangeDto dto = new PasswordChangeDto("trainer1", "old", "new");
 
-        when(validator.validate(dto)).thenReturn(Set.of());
-        when(trainingService.addTraining(dto)).thenReturn(trainingDto);
+        when(validator.validate(dto)).thenReturn(Collections.emptySet());
+        when(userService.authenticate(dto.getUsername(), dto.getOldPassword()))
+                .thenReturn(new User());
 
-        TrainingDto result = gymFacade.addTraining(dto);
+        gymFacade.changeTrainerPassword(dto);
 
-        assertSame(trainingDto, result);
-        verify(validator).validate(dto);
-        verify(trainingService).addTraining(dto);
+        verify(trainerService).changePassword(dto);
     }
 
     @Test
-    void changeTrainerPassword_invalidDto_throws() {
-        PasswordChangeDto dto = mock(PasswordChangeDto.class);
-        ConstraintViolation<PasswordChangeDto> violation = mock(ConstraintViolation.class);
+    void getUnassignedTrainers_shouldAuthenticateAndReturnList() {
+        String username = "trainee1", password = "pass";
+        TrainerDto dto = new TrainerDto();
 
-        when(validator.validate(dto)).thenReturn(Set.of(violation));
+        when(userService.authenticate(username, password)).thenReturn(new User());
+        when(trainerService.getUnassignedTrainersForTrainee(username)).thenReturn(List.of(dto));
 
-        assertThrows(ConstraintViolationException.class, () -> gymFacade.changeTrainerPassword(dto));
-
-        verify(validator).validate(dto);
-        verifyNoInteractions(trainerService);
+        List<TrainerDto> result = gymFacade.getUnassignedTrainers(username, password);
+        assertEquals(1, result.size());
+        assertEquals(dto, result.get(0));
     }
 
     @Test
-    void toggleTrainerStatus_delegates() {
-        String username = "trainer1";
+    void getTraineeTrainingsFiltered_shouldDelegateWithFilters() {
+        String username = "trainee1", password = "pass";
+        LocalDate from = LocalDate.of(2024, 1, 1);
+        LocalDate to = LocalDate.of(2024, 12, 31);
+        String trainerName = "Jane";
+        String trainingType = "Yoga";
 
-        gymFacade.toggleTrainerStatus(username);
+        TrainingDto dto = new TrainingDto();
 
-        verify(trainerService).toggleActive(username);
-        verifyNoInteractions(validator, traineeService, trainingService, userService);
+        when(userService.authenticate(username, password)).thenReturn(new User());
+        when(trainingService.getTrainingsForTrainee(username, password, from, to, trainerName, trainingType))
+                .thenReturn(List.of(dto));
+
+        List<TrainingDto> result = gymFacade.getTraineeTrainingsFiltered(username, password, from, to, trainerName, trainingType);
+        assertEquals(1, result.size());
     }
 
     @Test
-    void getTraineeTrainings_delegates() {
-        String username = "trainee1";
-        List<TrainingDto> list = List.of(mock(TrainingDto.class));
+    void updateTraineeTrainers_shouldAuthenticateAndDelegate() {
+        String username = "trainee1", password = "pass";
+        List<Long> trainerIds = List.of(1L, 2L);
 
-        when(trainingService.getTrainingsForTrainee(username)).thenReturn(list);
+        when(userService.authenticate(username, password)).thenReturn(new User());
 
-        List<TrainingDto> result = gymFacade.getTraineeTrainings(username);
+        gymFacade.updateTraineeTrainers(username, password, trainerIds);
 
-        assertSame(list, result);
-        verify(trainingService).getTrainingsForTrainee(username);
-        verifyNoInteractions(validator, traineeService, trainerService, userService);
+        verify(traineeService).updateTrainersList(username, trainerIds);
     }
 }
